--- a/src/main/resources/templates/produits.html
+++ b/src/main/resources/templates/produits.html
@@ -25,7 +25,7 @@ th:href ="@{css/boobstarp.min.css}" />
 		            </tr>
 		        </thead>
 		        <tbody>
-		            <tr th:each="product : ${listProducts}">
+		            <tr th:each="product : ${products}">
 		                <td th:text="${product.id}">Product ID</td>
 		                <td th:text="${product.name}">designation</td>
 		                
